# cargo-diagram

./: Cargo.toml  Dockerfile  LICENCE  README.md  overview.puml
.devcontainer/: devcontainer.json
cargo-diagram/: Cargo.toml  README.md
cargo-diagram-printers/: Cargo.toml  README.md
cargo-diagram-printers/src/: console.rs  lib.rs  uml.rs
cargo-diagram-visitors/: Cargo.toml  README.md
cargo-diagram-visitors/src/: lib.rs  module_visitor.rs
cargo-diagram/src/: analyzer.rs  main.rs
docs/assets/: overview.puml  overview_detailed.puml
tools/: regenerate.sh  replace_path_in_toml.sh
