[package]
name = "cargo-diagram-printers"
version = "0.1.3"
edition = "2021"
authors = ["Etienne Schmidt <eschmidt@schmidt-ti.eu>"]
description = "Contains printers for cargo-diagram"
license = "MIT"
repository = "https://github.com/gladion136/cargo-diagram"


[dependencies]
cargo-diagram-visitors = { version = "0.1.3" }
