[package]
name = "cargo-diagram-visitors"
version = "0.1.2"
edition = "2021"
authors = ["Etienne Schmidt <eschmidt@schmidt-ti.eu>"]
description = "Contains visitors for cargo-diagram"
license = "MIT"
repository = "https://github.com/gladion136/cargo-diagram"


[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
tracing = "0"
